# mpifort_cmake

./: CMakeLists.txt  test_openmp.f90
